k8s/service-a-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: apps
  labels:
    app: service-a
spec:
  selector:
    app: service-a
  ports:
  - port: 80          # ALB → Service
    targetPort: 8000 # Service → Pod's container port
