k8s/service-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
        - name: service-a
          image: 570430250751.dkr.ecr.ap-southeast-1.amazonaws.com/service-a:dev-v1.0.16
          imagePullPolicy: Always
          ports:
            - containerPort: 8000   # FastAPI runs here
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
---

apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: apps
spec:
  selector:
    app: service-a
  ports:
    - port: 80          # ALB hits this port
      targetPort: 8000  # maps to FastAPI inside container
  type: ClusterIP
