k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: service-a
  ports:
  - port: 80
    targetPort: 8080
